--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
-    "nodemon": "^2.0.21"
+    "nodemon,": "^2.0.21"
+  },
+  "engines": {
+    "node": "16.19.1"
   }
 }
